Clean up notebooks

--- a/notebooks/01 - MPI Example.ipynb
+++ b/notebooks/01 - MPI Example.ipynb
@@ -29,10 +29,10 @@
    "source": [
     "# Instantiate workspace and experiment objects\n",
     "ws = Workspace.from_config()\n",
-    "stan_exp = Experiment(ws, 'bb-large-test-intel')\n",
+    "stan_exp = Experiment(ws, 'stan-mpi-test')\n",
     "\n",
     "# Retrieve the Environment, ComputeTarget and Dataset objects.\n",
-    "env = Environment.get(ws, 'stan-intelmpi', version=2)\n",
+    "env = Environment.get(ws, 'stan-intelmpi')\n",
     "cpu_cluster = ComputeTarget(ws, 'cpu-cluster')\n",
     "\n",
     "# This dataset object is an AzureML FileDataset - which is pointing to the RDumps files \n",
@@ -49,6 +49,9 @@
    "outputs": [],
    "source": [
     "def submit_experiment(nodes, processes_per_node, samples=20000, test_id=None):\n",
+    "    if not samples in [1000,5000,10000,20000,300000]:\n",
+    "        raise AttributeError(f\"{samples} samples is not supported, please choose 1000, 5000, 10000, 20000, or 300000\")\n",
+    "    \n",
     "    params = {'--data-path': dataset.as_named_input('input_files').as_mount(),\n",
     "              '--shared-model-datastore': datastore.as_mount(),\n",
     "              '--nodes': nodes, \n",
@@ -102,7 +105,7 @@
    "outputs": [],
    "source": [
     "# Kick off the test suite\n",
-    "runs = run_test_suite(nodes=[2, 3, 4], procs=[2, 4, 8, 16], samples=300000)\n"
+    "runs = run_test_suite(samples=20000)\n"
    ]
   },
   {
@@ -135,6 +138,29 @@
    "source": [
     "from azureml.widgets import RunDetails\n",
     "RunDetails(runs[0][0]).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 6, 8, 12, 16, 24, 32, 48, 64}"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cores = [1, 2, 3, 4]\n",
+    "procs = [1, 2, 4, 8, 16]\n",
+    "\n",
+    "{x * y for x in cores for y in procs}"
    ]
   },
   {
