Updates MPI_Test and Notebook

--- a/notebooks/01 - MPI Example.ipynb
+++ b/notebooks/01 - MPI Example.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,67 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Kick off the test suite\n",
-    "runs = run_test_suite(samples=20000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da5a14a766224ea3b4b9bdb7fb652f4d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "_UserRunWidget(widget_settings={'childWidgetDisplay': 'popup', 'send_telemetry': False, 'log_level': 'INFO', '…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/aml.mini.widget.v1": "{\"status\": \"Completed\", \"workbench_run_details_uri\": \"https://ml.azure.com/experiments/bb-large-test-intel/runs/bb-large-test-intel_1580143979_1a690516?wsid=/subscriptions/02559c12-8982-43b3-8180-f4e41779489b/resourcegroups/azureml_demos/workspaces/azureml_demos\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"run_properties\": {\"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"created_utc\": \"2020-01-27T16:53:02.618249Z\", \"properties\": {\"_azureml.ComputeTargetType\": \"amlcompute\", \"ContentSnapshotId\": \"65802b36-4008-4dba-954f-49c7cee01b26\", \"AzureML.DerivedImageName\": \"azureml/azureml_02147e206df5ff1516ca3d4ee9643bb6\", \"ProcessInfoFile\": \"azureml-logs/process_info.json\", \"ProcessStatusFile\": \"azureml-logs/process_status.json\"}, \"tags\": {\"nodes\": \"2\", \"processes_per_node\": \"2\", \"samples\": \"20000\", \"test_id\": \"a1e8bf32-59f8-4023-a654-17db9c4b19ab\", \"_aml_system_ComputeTargetStatus\": \"{\\\"AllocationState\\\":\\\"steady\\\",\\\"PreparingNodeCount\\\":0,\\\"RunningNodeCount\\\":0,\\\"CurrentNodeCount\\\":2}\"}, \"script_name\": null, \"arguments\": null, \"end_time_utc\": \"2020-01-27T17:03:26.213134Z\", \"status\": \"Completed\", \"log_files\": {\"azureml-logs/55_azureml-execution-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/55_azureml-execution-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt?sv=2019-02-02&sr=b&sig=i9HUnPJaDkFioHRtjVSqCXKRdYwHtOC4wRYSH3D%2BPME%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/55_azureml-execution-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/55_azureml-execution-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt?sv=2019-02-02&sr=b&sig=lRcPZHoA8wygTYj9s6i7ulC8TJ3tP8TBlM9awhVvoiI%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/65_job_prep-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/65_job_prep-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt?sv=2019-02-02&sr=b&sig=mk%2FsAcgZTGRIhTVX4MlK6v11n1gH9%2BaPyVMNT9f9Eo4%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/65_job_prep-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/65_job_prep-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt?sv=2019-02-02&sr=b&sig=0QyGCJpvCvYuWh5%2FIKs3vN16HhZWABtyjxEdsxO%2BqVI%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/70_driver_log_0.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/70_driver_log_0.txt?sv=2019-02-02&sr=b&sig=nP6EdkCDFrt2upqArNkPKayUes0tH4Gm2gj0U00MzMc%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/70_driver_log_1.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/70_driver_log_1.txt?sv=2019-02-02&sr=b&sig=rpluWs8p9ICvFjcfNQ4PSra7idOqphqgO0s%2F9s3YRzc%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/70_driver_log_2.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/70_driver_log_2.txt?sv=2019-02-02&sr=b&sig=ehtm7GpkVHgG1Pcmynjeg648xVO5CYj2H8ARu15ORe0%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/70_driver_log_3.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/70_driver_log_3.txt?sv=2019-02-02&sr=b&sig=5rm5oYNePlAI%2Fl8CA9SKctWxRt0Q3f026tRJMD6KdQk%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/70_mpi_log.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/70_mpi_log.txt?sv=2019-02-02&sr=b&sig=BaUu%2Fiy5tL2k5BrmOOG1BaMB1Udyi9TYKGcKIU%2BGEWg%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/75_job_post-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/75_job_post-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt?sv=2019-02-02&sr=b&sig=TSkASdTklq2f0UQU8c6eraMaKAoAB%2BWPqdJ4GMwwUrU%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/75_job_post-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/75_job_post-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt?sv=2019-02-02&sr=b&sig=WTftJrgTKWvledWLl1zkjIvpTn9gnsnOF9pF2LT2Xlk%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/process_info.json\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/process_info.json?sv=2019-02-02&sr=b&sig=ZVit2khsY6BHcBj31Q%2BgfT2g4dKBksdYVvza74OpWu4%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"azureml-logs/process_status.json\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/azureml-logs/process_status.json?sv=2019-02-02&sr=b&sig=XGfNCLjW6IdTLr3km6TndXOhVVQ3sdUqokSn3I9Z5yM%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/0_197_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/0_197_azureml.log?sv=2019-02-02&sr=b&sig=%2BS4SOaCVX1dLExgc2WI8emURJCLRBmSk3eNggf8NqAc%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/1_194_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/1_194_azureml.log?sv=2019-02-02&sr=b&sig=GpaWOdTvHIhsAdxlf2haf9xCpdkb%2Fo3rmYokV673Mro%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/2_151_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/2_151_azureml.log?sv=2019-02-02&sr=b&sig=0%2BWITr9fguPb%2BzJqTkRyscjceK9CaRr8XkzKYdGvk28%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/3_152_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/3_152_azureml.log?sv=2019-02-02&sr=b&sig=rsa6g8H0eHv8REB%2BMj5Khs9wEWdOr3WgnDUXS0YfsJM%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/job_prep_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/job_prep_azureml.log?sv=2019-02-02&sr=b&sig=KY3kIzNhNRjcMZCqHMspi8%2BxZwznkvR2BDRFIHCfzWE%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\", \"logs/azureml/job_release_azureml.log\": \"https://amlstoreacct.blob.core.windows.net/azureml/ExperimentRun/dcid.bb-large-test-intel_1580143979_1a690516/logs/azureml/job_release_azureml.log?sv=2019-02-02&sr=b&sig=b1WOiO3aa31f2oTkYWtxpJVYGb3zNV%2F0rYa3eBvbX%2Bg%3D&st=2020-01-27T16%3A53%3A41Z&se=2020-01-28T01%3A03%3A41Z&sp=r\"}, \"log_groups\": [[\"azureml-logs/process_info.json\", \"azureml-logs/process_status.json\", \"logs/azureml/job_prep_azureml.log\", \"logs/azureml/job_release_azureml.log\"], [\"logs/azureml/0_197_azureml.log\"], [\"logs/azureml/1_194_azureml.log\"], [\"logs/azureml/2_151_azureml.log\"], [\"logs/azureml/3_152_azureml.log\"], [\"azureml-logs/55_azureml-execution-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\", \"azureml-logs/55_azureml-execution-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\"], [\"azureml-logs/65_job_prep-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\", \"azureml-logs/65_job_prep-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\"], [\"azureml-logs/70_mpi_log.txt\", \"azureml-logs/70_driver_log_0.txt\", \"azureml-logs/70_driver_log_1.txt\", \"azureml-logs/70_driver_log_2.txt\", \"azureml-logs/70_driver_log_3.txt\"], [\"azureml-logs/75_job_post-tvmps_2d5ce3e0b1e74d6333a93d8e59f3b01a84e351b96446c7ab1e5e0624a6aeb755_d.txt\", \"azureml-logs/75_job_post-tvmps_58c4636930c561505c8e34b4f22751ccc41e4a47fc8965eab990cb13e0dbbcad_d.txt\"]], \"run_duration\": \"0:10:23\"}, \"child_runs\": [], \"children_metrics\": {}, \"run_metrics\": [{\"name\": \"nodes\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [2]}]}, {\"name\": \"nprocs\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [2]}]}, {\"name\": \"shards\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [4]}]}, {\"name\": \"samples\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [20000]}]}, {\"name\": \"mpi_rank\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0, 1, 2, 3], \"series\": [{\"data\": [0, 1, 2, 3]}]}, {\"name\": \"total_time\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [99.815628]}]}, {\"name\": \"process_time\", \"run_id\": \"bb-large-test-intel_1580143979_1a690516\", \"categories\": [0], \"series\": [{\"data\": [99.815407]}]}], \"run_logs\": \"Starting job release. Current time:2020-01-27T17:03:08.608500\\r\\nLogging experiment finalizing status in history service.\\r\\nStarting the daemon thread to refresh tokens in background for process with pid = 707\\r\\nJob release is complete. Current time:2020-01-27T17:03:10.621083\\r\\n\\nRun is completed.\", \"graph\": {}, \"widget_settings\": {\"childWidgetDisplay\": \"popup\", \"send_telemetry\": false, \"log_level\": \"INFO\", \"sdk_version\": \"1.0.85\"}, \"loading\": false}"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from azureml.widgets import RunDetails\n",
-    "RunDetails(runs[0][0]).show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1, 2, 3, 4, 6, 8, 12, 16, 24, 32, 48, 64}"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cores = [1, 2, 3, 4]\n",
-    "procs = [1, 2, 4, 8, 16]\n",
-    "\n",
-    "{x * y for x in cores for y in procs}"
+    "runs = run_test_suite(samples=300000)\n"
    ]
   },
   {
@@ -168,7 +113,75 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from azureml.widgets import RunDetails\n",
+    "RunDetails(runs[0][0]).show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Assess MPI Performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_ids = {20000: '[ENTER TEST ID]',\n",
+    "            300000: '[ENTER TEST ID]'}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_run(run):\n",
+    "    sub_results = run.get_metrics()\n",
+    "    sub_results['test_id'] = run.tags['test_id']\n",
+    "    \n",
+    "    return sub_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "for samp_size in [20000,300000]:\n",
+    "    for run in stan_exp.get_runs(tags={'test_id': test_ids[samp_size]}):\n",
+    "        results.append(process_run(run))\n",
+    "\n",
+    "results_df = pd.DataFrame.from_records(results)\n",
+    "results_df['sample_size'] = results_df['samples'].apply(lambda x: \"20,000\" if x == 20000 else \"300,000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(13,10))\n",
+    "\n",
+    "sns.pointplot(x=\"shards\", y=\"process_time\",\n",
+    "             hue=\"sample_size\",\n",
+    "             data=results_df, ax=ax)"
+   ]
   }
  ],
  "metadata": {
